# tidecast

./: .env.example  .gitignore  CLAUDE.md  README.md  index.html  package.json  tsconfig.json  vite.config.ts
scripts/: smoke.ts
src/: App.tsx  globals.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AccountMini.tsx  ExpiryPicker.tsx  LogoMark.tsx  MarketHeat.tsx  Onboarding.tsx  PositionsPanel.tsx  PriceHeader.tsx  ReadyBanner.tsx  StrikeLadder.tsx  ThemeToggle.tsx  TicketPanel.tsx  VolSmile.tsx  WalletPopover.tsx
src/components/ui/: Button.tsx
src/hooks/: useDusdc.ts  useFaucet.ts  useManager.ts  useMarketPositions.ts  useOracles.ts  usePositions.ts  usePrice.ts  useQuote.test.ts  useQuote.ts  useSuiBalance.ts  useSvi.test.ts  useSvi.ts  useTrade.ts
src/landing/: Footer.tsx  Hero.tsx  Landing.tsx  Moats.tsx  Showcase.tsx  links.ts
src/lib/: constants.test.ts  constants.ts  openExternal.ts  strikes.test.ts  strikes.ts  sui.ts  theme.ts  utils.ts  wallet.ts
src/stores/: walletStore.ts
submission/: SUBMISSION.md  competitive-research.md  deepbook-field.md  judge-scorecard.md
video/: README.md  index.html  meta.json  package.json  script.md
video/public/: boxes.json
video/scripts/: captions.html  capture.mjs  cards.html  check-fresh.mjs  compose.sh  landing-shot.mjs  record.mjs  render-captions.mjs  render-cards.mjs  shot.mjs
video/scripts/narration/: p1-problem.txt  p2a-market.txt  p2b-quote.txt  p2c-mint.txt  p3-vision.txt  (+1 more)
